[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.3.1"
indexmap = "1.8.0"
threadpool = "1.0"

[dev-dependencies]
insta = "1.12.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.5"
port_scanner = "0.1.5"
serial_test = "0.6.0"